objects/QwikScore_Question__c.object
<CustomObject>
    <description>A question to ask.</description>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <defaultValue>4</defaultValue>
        <description>What is the maximum value for this question (numeric questions only)</description>
        <inlineHelpText>What is the maximum value for this question (numeric questions only)</inlineHelpText>
        <label>Maximum Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <defaultValue>1</defaultValue>
        <description>What is the lowest value (if this is a numeric type question)</description>
        <inlineHelpText>What is the lowest value (if this is a numeric type question)</inlineHelpText>
        <label>Minimum Value</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>The question to be presented to the user.</description>
        <inlineHelpText>The question to be presented to the user.</inlineHelpText>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>What type of question is this? Only numeric questions will count toward the final scoring result.</description>
        <inlineHelpText>What type of question is this? Only numeric questions will count toward the final scoring result.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric</fullName>
                    <default>true</default>
                    <label>Numeric</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How much of this questions group total score is this question worth (0 - 100)</description>
        <inlineHelpText>How much of this questions group total score is this question worth (0 - 100)</inlineHelpText>
        <label>Weight</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QwikScore_Question_Group__c</fullName>
        <description>Which question group does this question belong to?</description>
        <inlineHelpText>Which question group does this question belong to?</inlineHelpText>
        <label>Group</label>
        <referenceTo>QwikScore_Question_Group__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>QwikScore_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In what order should this question be presented within it&apos;s group? Lower numbers come first.</description>
        <inlineHelpText>In what order should this question be presented within it&apos;s group? Lower numbers come first.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question_Text__c</columns>
        <columns>Minimum_Value__c</columns>
        <columns>Maximum_Value__c</columns>
        <columns>Question_Weight__c</columns>
        <columns>Sequence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QQ-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>question_weight_between_0_and_100</fullName>
        <active>true</active>
        <description>Ensure that a weight of a question falls between 0 and 100 (inclusive).</description>
        <errorConditionFormula>OR(  Question_Weight__c  &lt; 0, Question_Weight__c  &gt; 100)</errorConditionFormula>
        <errorMessage>The weight for a question must be between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>